# mlsynthesis

./: README.md  shell.nix
evaluation/new/: gen.sh
evaluation/new/generated_specs/: lift_10  lift_15  lift_20  lift_25  lift_30  lift_35  lift_40  lift_45  lift_5  lift_50
evaluation/paper/: gen.sh  results
evaluation/paper/generated_specs/: lift_10  lift_15  lift_20  lift_25  lift_30  lift_35  lift_40  lift_45  lift_5  lift_50
examples/: basic_bints.in  lift.in  lift_alt.in  lift_alt2.in  lift_wtwo.in  report.in  report_alt.in  report_alt2.in  report_alt_ints.in  simple_bints.in  slugs_simple_wts.in
lib/: dune  game.ml  game.mli  lexer.mll  parser.mly  strategy.ml  strategy.mli  syntax.ml  utils.ml
src/: dune  game.ml  main.ml  strategy.ml  strategy.mli
test/: test_parser.ml
